<resources>
    <string name="app_name">KdApp</string>
    <string name="app_home">首页</string>
    <string name="app_mine">我的</string>
    <string name="kdapp_splash">欢迎使用KDApp</string>

    <string name="premission_denied_by_you">权限已经被您拒绝</string>
    <string name="prompt_open_permission">如果不打开权限则无法使用该功能,点击确定去打开权限</string>
    <string name="request_permission">KotlinMvp应用需要以下权限，请允许</string>
    <string name="entry_community">一键入园</string>
    <string name="press_help">一键求助</string>

    <string name="change_user_type">切换身份</string>

    <string name="change_security_user">点击切换到安保身份</string>
    <string name="security_device_info">设备信息</string>
    <string name="security_box_location">岗亭位置</string>

    <string name="change_visitors_user">点切换到访客身份</string>

    <string name="my_enter_record">我的通行记录</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_version_update">版本更新</string>

    <string name="title_login">"登陆注册"</string>

    <string name="login_with_password">"账号密码登陆"</string>
    <string name="login_with_message_verification">"快捷登录/注册"</string>
    <string name="press_the_exit_button_again">"再按一次退出程序"</string>

    <string name="hint_login_username">请输入手机号</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="hint_login_account">请输入帐号</string>
    <string name="hint_message_code">请输入验证码</string>
    <string name="login">登陆</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="register_new_user">注册新用户</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="about_us">关于我们</string>
    <string name="send_message_code">发送验证码</string>
    <string name="retry_send">%dS后重试</string>

    <string name="base_title">标题</string>
    <string name="title_taking_picture">拍照上传</string>

    <string name="title_enter_record">通行记录</string>

    <string name="record_community_name">小区名字: %s</string>
    <string name="record_enter_time">入区时刻: %s</string>
    <string name="record_enter_status">入区状态：</string>
    <string name="record_enter_allow">允许通行</string>
    <string name="record_enter_refused">被拒绝</string>
    <string name="record_enter_cancel">已取消</string>


</resources>
