<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/TitleBarText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/app_mine" />

    <include layout="@layout/layout_divider" />


    <com.xxr.kdapp.view.MineSettingLayout
            android:id="@+id/msl_security_change_user_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mineIcon="@drawable/ic_mine_change_user"
            app:mineText="@string/change_user_type"
            app:mineTextColor="@color/color_black" />

    <com.xxr.kdapp.view.MineSettingLayout
            android:id="@+id/msl_security_enter_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mineIcon="@drawable/ic_device_info"
            app:mineText="@string/security_device_info"
            app:mineTextColor="@color/color_black" />

    <com.xxr.kdapp.view.MineSettingLayout
            android:id="@+id/msl_security_box_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mineIcon="@drawable/ic_box_location"
            app:mineText="@string/security_box_location"
            app:mineTextColor="@color/color_black" />

    <com.xxr.kdapp.view.MineSettingLayout
            android:id="@+id/msl_security_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mineIcon="@drawable/ic_about_us"
            app:mineText="@string/about_us"
            app:mineTextColor="@color/color_black" />

    <com.xxr.kdapp.view.MineSettingLayout
            android:id="@+id/msl_security_version_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mineIcon="@drawable/ic_version_update"
            app:mineText="@string/mine_version_update"
            app:mineTextColor="@color/color_black" />
</LinearLayout>
