<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_visitors_home"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@string/app_mine"
            android:textColor="#0f0"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <LinearLayout
                android:id="@+id/ll_enter_community"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_enter_community"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:text="@string/entry_community"
                    android:textColor="#0f0"
                    android:textSize="20sp"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_vistors_please_help"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:text="@string/press_help"
                    android:textColor="#f00"
                    android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>